Quorum/Library/Tests/TypeCheckerGenerated/Fail/RetAssignBooleanTextField.quorum
class Main
    boolean v = Test()
    action Main
    end

    action Test() returns boolean
        text var = "text"
        return var
    end
end